// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Renderers/Boolean Renderer Boolean Renderer 1`] = `
<span
  className="magic-boolean"
>
  Yes
</span>
`;

exports[`Storyshots Renderers/Boolean Renderer Falsy 1`] = `
<span
  className="magic-boolean"
>
  No
</span>
`;

exports[`Storyshots Renderers/Boolean Renderer Truthy 1`] = `
<span
  className="magic-boolean"
>
  Yes
</span>
`;

exports[`Storyshots Renderers/Boolean Renderer With Context Overrides 1`] = `
<span
  className="magic-boolean"
>
  i think not
</span>
`;

exports[`Storyshots Renderers/Boolean Renderer With Overrides 1`] = `
<span
  className="magic-boolean"
>
  Nope
</span>
`;
